force-app/main/default/objects/Lead_Request__c/Lead_Request__c.object-meta.xml
<CustomObject>
    <label>Lead Request</label>
    <nameField>
        <label>Lead Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>