force-app/main/default/objects/Lead_Request__c/fields/Converted_Lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Requests</relationshipLabel>
    <relationshipName>Lead_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>