force-app/main/default/objects/Lead_Request__c/fields/Current_Lender__c.field-meta.xml
<CustomField>
    <fullName>Current_Lender__c</fullName>
    <label>Current Lender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mBank</fullName>
            </value>
            <value>
                <fullName>PKO BP</fullName>
            </value>
            <value>
                <fullName>ING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>