force-app/main/default/objects/Lead_Request__c/recordTypes/First_Time_Buyer.recordType-meta.xml
<RecordType>
    <fullName>First_Time_Buyer</fullName>
    <active>true</active>
    <label>First-Time Buyer</label>
</RecordType>