force-app/main/default/objects/Lead_Request__c/recordTypes/Remortgage.recordType-meta.xml
<RecordType>
    <fullName>Remortgage</fullName>
    <active>true</active>
    <label>Remortgage</label>
</RecordType>