force-app/main/default/objects/Lead_Request__c/listViews/Remortgage_Queue_Lead_Request.listView-meta.xml
<ListView>
    <fullName>Remortgage_Queue_Lead_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Remortgage Queue</label>
    <queue>Remortgage_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>